<resources>
    <string name="app_name">DeskBookingAppllication</string>
    <string name="e_mail">E-mail</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginTitle">WELCOME</string>
    <string name="sign_up">SIGN UP</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="department">Department</string>
    <string name="bookingplan">BookingPlan</string>
    <string name="profile">Profile</string>
    <string name="Profile">Profile</string>
    <string name="password">Password</string>
    <string name="office_image">Office Image</string>

    <string name="save">Save</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="comments">Comments</string>
    <string name="deskimage">deskImage</string>
    <string name="pick_a_date_to_book_desk">Pick a date to Book Desk</string>
    <string name="cancel">Cancel</string>
    <string name="book">Book</string>
    <string name="favorites">Favorites</string>
    <string name="admin">Admin</string>
    <string name="remember_me">Remember me</string>
    <string name="like">LIKE</string>
    <string name="logout">Logout</string>
    <string name="likebutton">likeButton</string>
</resources>














