<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/BookingPlan"
        android:icon="@drawable/bookingplan"
        android:title="@string/bookingplan"
        android:enabled="true"/>
    <item
        android:id="@+id/Profile"
        android:icon="@drawable/profile"
        android:title="@string/profile"
        android:enabled="true"/>
    <item
        android:id="@+id/Favorites"
        android:icon="@drawable/favorite"
        android:title="@string/favorites"
        android:enabled="true"/>
    <item
        android:id="@+id/admin"
        android:icon="@drawable/ic_baseline_admin"
        android:title="@string/admin"

        />
</menu>