<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UserProfile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView

            android:id="@+id/tv_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Profile"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.084" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_heading">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_first_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColorHint="#808080"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.7">

                    <EditText
                        android:id="@+id/et_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"

                        android:hint="@string/first_name"
                        android:padding="14dp"
                        android:textColor="#000000"
                        android:textColorHint="#808080"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_last_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:textColorHint="#808080"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_first_name"
                    app:layout_constraintWidth_percent="0.7">

                    <EditText
                        android:id="@+id/et_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:hint="@string/last_name"
                        android:padding="10dp"
                        android:textColor="#000000"
                        android:textColorHint="#808080"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:textColorHint="#808080"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_last_name"
                    app:layout_constraintWidth_percent="0.7">

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"

                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="10dp"
                        android:textColor="#000000"
                        android:textColorHint="#808080"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_contact_no"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:textColorHint="#808080"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_email"
                    app:layout_constraintWidth_percent="0.7">

                    <EditText
                        android:id="@+id/et_contact_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:hint="@string/department"
                        android:inputType="phone"
                        android:padding="10dp"
                        android:textColor="#000000"
                        android:textColorHint="#808080"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_des"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:textColorHint="#808080"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_contact_no"
                    app:layout_constraintWidth_percent="0.7">

                    <EditText
                        android:id="@+id/et_des"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"

                        android:hint="@string/password"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="#000000"
                        android:textColorHint="#808080"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btn_Login"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/save"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintTop_toBottomOf="@+id/layout_des" />

                <Button
                    android:id="@+id/btn_Register"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/cancel"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_Login"

                    app:layout_constraintTop_toBottomOf="@+id/layout_des" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>